--- a/BeautifulSoup, Pandas- Github.ipynb
+++ b/BeautifulSoup, Pandas- Github.ipynb
@@ -354,7 +354,7 @@
     "                    print('opis: ', opis)\n",
     "                    print(adres_www, '\\n')\n",
     "\n",
-    "                    # zapisuję wyciągnięte dane do takiej postaci, abym mogła je dalej zapisać w Pandasie\n",
+    "                    # zapisuję wyciągnięte dane do takiej postaci, abym mogła je dalej zapisać w Pandas\n",
     "                    adresy.append(adres.strip())\n",
     "                    powierzchnie.append(powierzchnia)\n",
     "                    ceny.append(cena)\n",
@@ -438,148 +438,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Cena (zł/m2)</th>\n",
-       "      <th>Forma własności</th>\n",
-       "      <th>Okna</th>\n",
-       "      <th>Rodzaj zabudowy</th>\n",
-       "      <th>Rok budowy</th>\n",
-       "      <th>Rynek</th>\n",
-       "      <th>adres</th>\n",
-       "      <th>cena (zł)</th>\n",
-       "      <th>liczba_pokoi</th>\n",
-       "      <th>opis</th>\n",
-       "      <th>pietro</th>\n",
-       "      <th>powierzchnia (m2)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5749.99</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>plastikowe</td>\n",
-       "      <td>apartamentowiec</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>201422</td>\n",
-       "      <td>2</td>\n",
-       "      <td>\\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...</td>\n",
-       "      <td>Piętro 3 (z 4)</td>\n",
-       "      <td>35.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5549.99</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>plastikowe</td>\n",
-       "      <td>apartamentowiec</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>212731</td>\n",
-       "      <td>2</td>\n",
-       "      <td>\\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...</td>\n",
-       "      <td>Piętro parter (z 4)</td>\n",
-       "      <td>38.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5300</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>178504</td>\n",
-       "      <td>2</td>\n",
-       "      <td>\\n0% PROWIZJI !!!OPIS MIESZKANIA:- Salon z ane...</td>\n",
-       "      <td>Piętro 3 (z 5)</td>\n",
-       "      <td>33.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5300</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>178504</td>\n",
-       "      <td>2</td>\n",
-       "      <td>\\n0% PROWIZJI !!!!!!!!!!!!!!!!OPIS MIESZKANIA:...</td>\n",
-       "      <td>Piętro 3 (z 5)</td>\n",
-       "      <td>33.68</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Cena (zł/m2)  Forma własności         Okna   Rodzaj zabudowy Rok budowy  \\\n",
-       "0      5749.99   pełna własność   plastikowe   apartamentowiec      2019    \n",
-       "1      5549.99   pełna własność   plastikowe   apartamentowiec      2020    \n",
-       "2         5300   pełna własność          NaN               NaN      2018    \n",
-       "3         5300   pełna własność          NaN               NaN      2018    \n",
-       "\n",
-       "        Rynek                                              adres cena (zł)  \\\n",
-       "0   pierwotny  Mieszkanie na sprzedaż, małopolskie, wielicki,...    201422   \n",
-       "1   pierwotny  Mieszkanie na sprzedaż, małopolskie, wielicki,...    212731   \n",
-       "2   pierwotny  Mieszkanie na sprzedaż, małopolskie, wielicki,...    178504   \n",
-       "3   pierwotny  Mieszkanie na sprzedaż, małopolskie, wielicki,...    178504   \n",
-       "\n",
-       "  liczba_pokoi                                               opis  \\\n",
-       "0            2  \\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...   \n",
-       "1            2  \\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...   \n",
-       "2            2  \\n0% PROWIZJI !!!OPIS MIESZKANIA:- Salon z ane...   \n",
-       "3            2  \\n0% PROWIZJI !!!!!!!!!!!!!!!!OPIS MIESZKANIA:...   \n",
-       "\n",
-       "                pietro powierzchnia (m2)  \n",
-       "0       Piętro 3 (z 4)             35.03  \n",
-       "1  Piętro parter (z 4)             38.33  \n",
-       "2       Piętro 3 (z 5)             33.68  \n",
-       "3       Piętro 3 (z 5)             33.68  "
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "oferty"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [],
@@ -601,263 +459,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adres</th>\n",
-       "      <th>Rynek</th>\n",
-       "      <th>powierzchnia (m2)</th>\n",
-       "      <th>cena (zł)</th>\n",
-       "      <th>Cena (zł/m2)</th>\n",
-       "      <th>Forma własności</th>\n",
-       "      <th>liczba_pokoi</th>\n",
-       "      <th>pietro</th>\n",
-       "      <th>Rodzaj zabudowy</th>\n",
-       "      <th>Stan wykończenia</th>\n",
-       "      <th>Czynsz</th>\n",
-       "      <th>opis</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>35.03</td>\n",
-       "      <td>201422</td>\n",
-       "      <td>5749.99</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Piętro 3 (z 4)</td>\n",
-       "      <td>apartamentowiec</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>38.33</td>\n",
-       "      <td>212731</td>\n",
-       "      <td>5549.99</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Piętro parter (z 4)</td>\n",
-       "      <td>apartamentowiec</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>33.68</td>\n",
-       "      <td>178504</td>\n",
-       "      <td>5300</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Piętro 3 (z 5)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n0% PROWIZJI !!!OPIS MIESZKANIA:- Salon z ane...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>33.68</td>\n",
-       "      <td>178504</td>\n",
-       "      <td>5300</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Piętro 3 (z 5)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n0% PROWIZJI !!!!!!!!!!!!!!!!OPIS MIESZKANIA:...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               adres       Rynek  \\\n",
-       "0  Mieszkanie na sprzedaż, małopolskie, wielicki,...   pierwotny   \n",
-       "1  Mieszkanie na sprzedaż, małopolskie, wielicki,...   pierwotny   \n",
-       "2  Mieszkanie na sprzedaż, małopolskie, wielicki,...   pierwotny   \n",
-       "3  Mieszkanie na sprzedaż, małopolskie, wielicki,...   pierwotny   \n",
-       "\n",
-       "  powierzchnia (m2) cena (zł) Cena (zł/m2)  Forma własności liczba_pokoi  \\\n",
-       "0             35.03    201422      5749.99   pełna własność            2   \n",
-       "1             38.33    212731      5549.99   pełna własność            2   \n",
-       "2             33.68    178504         5300   pełna własność            2   \n",
-       "3             33.68    178504         5300   pełna własność            2   \n",
-       "\n",
-       "                pietro   Rodzaj zabudowy  Stan wykończenia  Czynsz  \\\n",
-       "0       Piętro 3 (z 4)   apartamentowiec               NaN     NaN   \n",
-       "1  Piętro parter (z 4)   apartamentowiec               NaN     NaN   \n",
-       "2       Piętro 3 (z 5)               NaN               NaN     NaN   \n",
-       "3       Piętro 3 (z 5)               NaN               NaN     NaN   \n",
-       "\n",
-       "                                                opis  \n",
-       "0  \\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...  \n",
-       "1  \\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...  \n",
-       "2  \\n0% PROWIZJI !!!OPIS MIESZKANIA:- Salon z ane...  \n",
-       "3  \\n0% PROWIZJI !!!!!!!!!!!!!!!!OPIS MIESZKANIA:...  "
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "mieszkania_oferty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adres</th>\n",
-       "      <th>Rynek</th>\n",
-       "      <th>powierzchnia (m2)</th>\n",
-       "      <th>cena (zł)</th>\n",
-       "      <th>Cena (zł/m2)</th>\n",
-       "      <th>Forma własności</th>\n",
-       "      <th>liczba_pokoi</th>\n",
-       "      <th>pietro</th>\n",
-       "      <th>Rodzaj zabudowy</th>\n",
-       "      <th>Stan wykończenia</th>\n",
-       "      <th>Czynsz</th>\n",
-       "      <th>opis</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>35.03</td>\n",
-       "      <td>201422</td>\n",
-       "      <td>5749.99</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3 (z 4)</td>\n",
-       "      <td>apartamentowiec</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>38.33</td>\n",
-       "      <td>212731</td>\n",
-       "      <td>5549.99</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>2</td>\n",
-       "      <td>parter (z 4)</td>\n",
-       "      <td>apartamentowiec</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mieszkanie na sprzedaż, małopolskie, wielicki,...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>33.68</td>\n",
-       "      <td>178504</td>\n",
-       "      <td>5300</td>\n",
-       "      <td>pełna własność</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3 (z 5)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n0% PROWIZJI !!!OPIS MIESZKANIA:- Salon z ane...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               adres       Rynek  \\\n",
-       "0  Mieszkanie na sprzedaż, małopolskie, wielicki,...   pierwotny   \n",
-       "1  Mieszkanie na sprzedaż, małopolskie, wielicki,...   pierwotny   \n",
-       "2  Mieszkanie na sprzedaż, małopolskie, wielicki,...   pierwotny   \n",
-       "\n",
-       "  powierzchnia (m2) cena (zł) Cena (zł/m2)  Forma własności liczba_pokoi  \\\n",
-       "0             35.03    201422      5749.99   pełna własność            2   \n",
-       "1             38.33    212731      5549.99   pełna własność            2   \n",
-       "2             33.68    178504         5300   pełna własność            2   \n",
-       "\n",
-       "          pietro   Rodzaj zabudowy  Stan wykończenia  Czynsz  \\\n",
-       "0        3 (z 4)   apartamentowiec               NaN     NaN   \n",
-       "1   parter (z 4)   apartamentowiec               NaN     NaN   \n",
-       "2        3 (z 5)               NaN               NaN     NaN   \n",
-       "\n",
-       "                                                opis  \n",
-       "0  \\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...  \n",
-       "1  \\nKAMERALNE OSIEDLE PRZY PARKU Z DOSKONAŁYM DO...  \n",
-       "2  \\n0% PROWIZJI !!!OPIS MIESZKANIA:- Salon z ane...  "
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# usuwam duplikaty\n",
     "mieszkania_oferty.drop_duplicates(subset=['powierzchnia (m2)', 'cena (zł)','pietro','liczba_pokoi' ])"
@@ -1019,7 +636,7 @@
     "                    print('opis: ', opis)\n",
     "                    print(adres_www, '\\n')\n",
     "\n",
-    "                    # zapisuję wyciągnięte dane do takiej postaci, abym mogła je dalej zapisać w Pandasie\n",
+    "                    # zapisuję wyciągnięte dane do takiej postaci, abym mogła je dalej zapisać w Pandas\n",
     "                    adresy.append(adres.strip())\n",
     "                    powierzchnie.append(powierzchnia)\n",
     "                    ceny.append(cena)\n",
