Zmiany dla potrzeb poprawnego dzialania mybinder

--- a/BeautifulSoup, Pandas- Github.ipynb
+++ b/BeautifulSoup, Pandas- Github.ipynb
@@ -509,7 +509,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mieszkania.to_csv(r'/home/kinga/python/Web_scrapping/mieszkania_oferty.csv')"
+    "# zapisanie pobranych ofert do pliku CSV\n",
+    "# mieszkania.to_csv(r'/home/kinga/python/Web_scrapping/mieszkania_oferty.csv')"
    ]
   },
   {
@@ -826,7 +827,8 @@
     "\n",
     "\n",
     "sciezka='/home/kinga/python/Web_scrapping/'+plik_wynikowy+'.xlsx'\n",
-    "oferty.to_excel(sciezka, index=False)\n",
+    "# zapisanie do pliku Excel \n",
+    "# oferty.to_excel(sciezka, index=False)\n",
     "print ('GOTOWE :) Plik został zapisany w lokalizacji: ', sciezka)\n"
    ]
   },
@@ -968,7 +970,7 @@
     }
    ],
    "source": [
-    "oferty.head()"
+    "print (oferty.head())"
    ]
   },
   {
