zmiany dla potrzeb poprawnego działania Mybinder

--- a/BeautifulSoup, Pandas- Github.ipynb
+++ b/BeautifulSoup, Pandas- Github.ipynb
@@ -834,143 +834,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Adres</th>\n",
-       "      <th>Rynek</th>\n",
-       "      <th>Powierzchnia (m2)</th>\n",
-       "      <th>Powierzchnia działki (m2)</th>\n",
-       "      <th>Cena (zł)</th>\n",
-       "      <th>Cena (zł/m2)</th>\n",
-       "      <th>Rodzaj zabudowy</th>\n",
-       "      <th>Stan wykończenia</th>\n",
-       "      <th>Opis</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dom na sprzedaż, wielkopolskie, poznański, Swa...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>83.21</td>\n",
-       "      <td>400</td>\n",
-       "      <td>349000</td>\n",
-       "      <td>4194.21</td>\n",
-       "      <td>bliźniak</td>\n",
-       "      <td>do wykończenia</td>\n",
-       "      <td>Osiedle Zielone Rabowice II PRZEDSPRZEDAŻ ETAP...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Dom na sprzedaż, wielkopolskie, poznański, Swa...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>91.33</td>\n",
-       "      <td>440,50</td>\n",
-       "      <td>379000</td>\n",
-       "      <td>4149.79</td>\n",
-       "      <td>bliźniak</td>\n",
-       "      <td>do wykończenia</td>\n",
-       "      <td>Osiedle „Nowe Gortatowo” - II etap inwestycji ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Dom na sprzedaż, wielkopolskie, poznański, Swa...</td>\n",
-       "      <td>wtórny</td>\n",
-       "      <td>200</td>\n",
-       "      <td>770</td>\n",
-       "      <td>560000</td>\n",
-       "      <td>2800</td>\n",
-       "      <td>wolnostojący</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Polecamy Przedmiotem sprzedaży jest  duży dom ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Dom na sprzedaż, wielkopolskie, poznański, Swa...</td>\n",
-       "      <td>pierwotny</td>\n",
-       "      <td>75</td>\n",
-       "      <td>400</td>\n",
-       "      <td>329000</td>\n",
-       "      <td>4386.67</td>\n",
-       "      <td>bliźniak</td>\n",
-       "      <td>do wykończenia</td>\n",
-       "      <td>Osiedle Zielone Rabowice II LOKALIZACJA:Swarzę...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Dom na sprzedaż, wielkopolskie, poznański, Swa...</td>\n",
-       "      <td>wtórny</td>\n",
-       "      <td>476</td>\n",
-       "      <td>553</td>\n",
-       "      <td>719000</td>\n",
-       "      <td>1510.5</td>\n",
-       "      <td>wolnostojący</td>\n",
-       "      <td>do zamieszkania</td>\n",
-       "      <td>Biuro nieruchomości JxProjekt poleca do sprzed...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               Adres       Rynek  \\\n",
-       "0  Dom na sprzedaż, wielkopolskie, poznański, Swa...   pierwotny   \n",
-       "1  Dom na sprzedaż, wielkopolskie, poznański, Swa...   pierwotny   \n",
-       "2  Dom na sprzedaż, wielkopolskie, poznański, Swa...      wtórny   \n",
-       "3  Dom na sprzedaż, wielkopolskie, poznański, Swa...   pierwotny   \n",
-       "4  Dom na sprzedaż, wielkopolskie, poznański, Swa...      wtórny   \n",
-       "\n",
-       "  Powierzchnia (m2) Powierzchnia działki (m2) Cena (zł) Cena (zł/m2)  \\\n",
-       "0             83.21                      400     349000      4194.21   \n",
-       "1             91.33                   440,50     379000      4149.79   \n",
-       "2               200                      770     560000         2800   \n",
-       "3                75                      400     329000      4386.67   \n",
-       "4               476                      553     719000       1510.5   \n",
-       "\n",
-       "  Rodzaj zabudowy  Stan wykończenia  \\\n",
-       "0        bliźniak    do wykończenia   \n",
-       "1        bliźniak    do wykończenia   \n",
-       "2    wolnostojący               NaN   \n",
-       "3        bliźniak    do wykończenia   \n",
-       "4    wolnostojący   do zamieszkania   \n",
-       "\n",
-       "                                                Opis  \n",
-       "0  Osiedle Zielone Rabowice II PRZEDSPRZEDAŻ ETAP...  \n",
-       "1  Osiedle „Nowe Gortatowo” - II etap inwestycji ...  \n",
-       "2  Polecamy Przedmiotem sprzedaży jest  duży dom ...  \n",
-       "3  Osiedle Zielone Rabowice II LOKALIZACJA:Swarzę...  \n",
-       "4  Biuro nieruchomości JxProjekt poleca do sprzed...  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "print (oferty.head())"
+    "oferty.head()"
    ]
   },
   {
