--- a/BeautifulSoup, Pandas- Github.ipynb
+++ b/BeautifulSoup, Pandas- Github.ipynb
@@ -1185,11 +1185,203 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Aktualizacja maj 2020"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import bibliotek\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import csv\n",
+    "from time import sleep\n",
+    "import ipywidgets as widgets \n",
+    "from datetime import date\n",
+    "\n",
+    "# wykorzystana funkcja:\n",
+    "\n",
+    "def zmiana_na_float (cecha):\n",
+    "    if isinstance (cecha, str): # jeśli cecha jest stringiem\n",
+    "        return float(cecha.rsplit(' ',1)[0].replace(' ','').replace(',','.'))     #rsplit-rozdzielam po spacji, ale tylko jednej spacji licząc od końca. Jeśli w stringu będzie kilka spacji, to podzieli tylko po tej ostatniej \n",
+    "    else:\n",
+    "        return cecha\n",
+    "\n",
+    "\n",
+    "strona=input('Wpisz adres strony internetowej: ')\n",
+    "strony=[strona]\n",
+    "liczba_wybranych_str=int(input(\"Podaj, ile stron chcesz przejrzeć: \"))\n",
+    "plik_wynikowy=input(\"Podaj nazwę pliku, do którego chcesz zapisać: \")\n",
+    "\n",
+    "page=requests.get(strona)\n",
+    "soup=BeautifulSoup(page.content, 'html.parser')\n",
+    "\n",
+    "cala_strona=soup.find(class_='col-md-content section-listing__row-content') # dane całej strony\n",
+    "wiersz_dot_stron=cala_strona.find_all(class_='pager') # w tym jest klasa 'page-counter' i 'page_next'\n",
+    "\n",
+    "przycisk_przewijania_stron=cala_strona.find_all(class_='pager-next')\n",
+    "\n",
+    "for item in wiersz_dot_stron: # sprawdzam, ile stron z ogłoszeniami zostało znalezionych wg.wybranych kryteriów\n",
+    "    liczba_dostepnych_stron=item.find_all('li')\n",
+    "    liczba_dostepnych_stron=int(list(liczba_dostepnych_stron)[-2].get_text())\n",
+    "    \n",
+    "    print ('Liczba wybranych stron to: ', liczba_wybranych_str)\n",
+    "    print ('liczba dostępnych stron to: ', liczba_dostepnych_stron)\n",
+    "\n",
+    "    # ograniczenie liczby pobranych stron do 10\n",
+    "    if liczba_wybranych_str<=liczba_dostepnych_stron and liczba_wybranych_str<=10:  \n",
+    "        for i in range(2,liczba_wybranych_str+1):\n",
+    "            strony.append(strona +'&page=' + str(i))\n",
+    "    else:\n",
+    "        for i in range(2,11):\n",
+    "            strony.append(strona +'&page=' + str(i))\n",
+    "        print('Maksymalnie możesz pobrać 10 stron- tyle zostanie pobranych!')\n",
+    "        \n",
+    "\n",
+    "numery_ogloszen=[]\n",
+    "daty_dodania=[]\n",
+    "data_pobrania_oferty=date.today()\n",
+    "rodzaje_nieruchomosci=[]\n",
+    "adresy=[]\n",
+    "ceny=[]\n",
+    "dodatkowe=[]\n",
+    "opisy=[]\n",
+    "    \n",
+    "x=0\n",
+    "pasek_postepu = widgets.IntProgress(min=x, max=liczba_wybranych_str) # pasek postępu \n",
+    "opis_paska_postepu= widgets.Label(value='Liczba pobranych stron',layout=widgets.Layout(width='auto') )\n",
+    "liczba_sparsowanych_stron =widgets.Label() \n",
+    "kontener_paska_postepu= widgets.HBox([opis_paska_postepu,pasek_postepu, liczba_sparsowanych_stron])\n",
+    "display(kontener_paska_postepu)\n",
+    "\n",
+    "\n",
+    "for item in strony:\n",
+    "    zawartosc = requests.get(item)\n",
+    "    soup=BeautifulSoup(zawartosc.content, 'html.parser')\n",
+    "    wszystkie_oferty = soup.find(class_='col-md-content section-listing__row-content') ### klasa, w ktorej są wszystskie oferty\n",
+    "    wszystkie_oferty_items = wszystkie_oferty.find_all(class_=\"offer-item-details\")## klasa, w której są szczegóły poszczególnych ofert\n",
+    "    for item in wszystkie_oferty_items:\n",
+    "        try: \n",
+    "            cena=zmiana_na_float(item.find(class_=\"offer-item-price\").get_text().strip()) # strip - usuwam spacje na początku i końcu\n",
+    "        except:\n",
+    "            continue # niektóre ogłoszenia nie mają podanej ceny, pomijam te oferty\n",
+    "        \n",
+    "        rodzaj_nieruchomosci=item.find(class_='hidden-xs').get_text().split(':')[0]\n",
+    "        lokalizacja = item.find('span', {'class': 'hidden-xs'})\n",
+    "        powierzchnia= zmiana_na_float(item.find(class_=\"hidden-xs offer-item-area\").get_text().split(' ')[0]) # żeby było bez m2\n",
+    "        strony_www=item.find_all('a')\n",
+    "        for item in strony_www:\n",
+    "            adres_www=item.get('href') \n",
+    "            try:\n",
+    "                zawartosc2=requests.get(adres_www)\n",
+    "            except:\n",
+    "                #print('brak url')\n",
+    "                break # przerywa i uruchamia kod od nowa, w przeciwnym wypadku pobrałby każdą ofertę 2 razy\n",
+    "            soup2=BeautifulSoup(zawartosc2.content, 'html.parser')\n",
+    "            szczegoly=soup2.find_all(id='root') \n",
+    "            for item in szczegoly:       \n",
+    "                lokalizacja=item.find(class_='css-1ub7gzr').get_text().split(';}')[-1]\n",
+    "                try:\n",
+    "                    numer_oferty=item.find(class_='css-kos6vh').get_text().split(': ')[1]\n",
+    "                except:\n",
+    "                    'brak danych'\n",
+    "                try:\n",
+    "                    data_dodania=item.find(class_=\"css-lh1bxu\").get_text().split(': ')[1].split('D')[0]\n",
+    "                except:\n",
+    "                    'brak danych'\n",
+    "                if soup2.find_all(class_='section-description'): \n",
+    "                    opis=item.find(class_='section-description').get_text().split('underline;}')[1]\n",
+    "                else:\n",
+    "                    opis='brak informacji'   \n",
+    "                dodatkowe_parametry=soup2.find_all(class_='css-1ci0qpi')                               \n",
+    "                slownik={}\n",
+    "                for item in dodatkowe_parametry: \n",
+    "                    wszystko=item.find_all('li')\n",
+    "                    for e in wszystko:\n",
+    "                        klucz,wartosc=e.text.split(':', maxsplit=1)#maxsplit=1 dzieli tylko po pierwszym dwukropku\n",
+    "                        slownik[klucz]=wartosc\n",
+    "\n",
+    "                    print('Rodzaj nieruchomości: ', rodzaj_nieruchomosci)\n",
+    "                    print('Lokalizacja: ', lokalizacja)\n",
+    "                    print('id: ',numer_oferty)\n",
+    "                    print('data_dodatnia: ', data_dodania)\n",
+    "                    print('Cena (zł): ', cena)\n",
+    "                    for klucz,wartosc in slownik.items():\n",
+    "                        print(klucz,': ',wartosc)\n",
+    "                    print('Opis: ', opis)\n",
+    "                    print(adres_www, '\\n')\n",
+    "                    \n",
+    "                # zapisuję dane do takiej postaci, abym mogła je dalej zapisać w Pandas\n",
+    "                    numery_ogloszen.append(numer_oferty)\n",
+    "                    daty_dodania.append(data_dodania)\n",
+    "                    rodzaje_nieruchomosci.append(rodzaj_nieruchomosci)\n",
+    "                    adresy.append(lokalizacja)\n",
+    "                    ceny.append(cena)\n",
+    "                    opisy.append(opis)\n",
+    "                    dodatkowe.append(slownik)\n",
+    "    x=x+1\n",
+    "    pasek_postepu.value=x\n",
+    "    liczba_sparsowanych_stron.value=str(x) # Label musi być stringiem\n",
+    "\n",
+    "oferty=pd.DataFrame()\n",
+    "for x in range(0,len(numery_ogloszen)):\n",
+    "    sr=pd.Series([numery_ogloszen[x], daty_dodania[x], data_pobrania_oferty,\n",
+    "                  rodzaje_nieruchomosci[x],adresy[x],ceny[x], opisy[x] ],\\\n",
+    "                     index=['Nr oferty', 'Data dodania','Data pobrania oferty',\n",
+    "                            'Rodzaj nieruchomosci','Adres','Cena (zł)', 'Opis'])\n",
+    "    sr_dodatkowe=pd.Series(dodatkowe[x])\n",
+    "    sr=pd.concat([sr,sr_dodatkowe])\n",
+    "    oferty=pd.concat([oferty,sr],axis=1,ignore_index=True, sort=False)\n",
+    "\n",
+    "oferty=oferty.T\n",
+    "\n",
+    "# usuwam 'escape characters' z kolumny 'opis'\n",
+    "oferty.loc[:,'Opis'] = oferty.Opis.str.replace('\\n','',regex=True)\n",
+    "# usuwam duplikaty\n",
+    "oferty.drop_duplicates(subset=['Nr oferty','Rynek','Powierzchnia', 'Cena (zł)' ], inplace=True)\n",
+    "oferty.rename(columns={'Powierzchnia': 'Powierzchnia (m2)'}, inplace=True)\n",
+    "oferty['Powierzchnia (m2)']=oferty['Powierzchnia (m2)'].apply(lambda x: zmiana_na_float(x)) # zmieniam powierzchnię na float i usuwam 'm2'\n",
+    "oferty['Cena (zł/m2)']=oferty.apply(lambda x: round(x['Cena (zł)']/x['Powierzchnia (m2)'],2),axis=1)\n",
+    "\n",
+    "# Tworzę odpowiedni data frame w zależności od typu nieruchomości\n",
+    "if oferty[oferty['Rodzaj nieruchomosci'].str.contains('Mieszkanie')].shape[0]>0:\n",
+    "    kolejnosc_kolumn=['Nr oferty', 'Data dodania','Data pobrania oferty','Rodzaj nieruchomosci',\n",
+    "                      'Adres','Powierzchnia (m2)','Cena (zł)','Cena (zł/m2)','Liczba pokoi','Rynek', \n",
+    "                      'Rodzaj zabudowy', 'Piętro','Liczba pięter', 'Materiał budynku','Okna', 'Ogrzewanie', \n",
+    "                      'Rok budowy', 'Stan wykończenia', 'Czynsz', 'Forma własności','Opis']\n",
+    "    oferty=oferty.reindex(columns=kolejnosc_kolumn)\n",
+    "elif oferty[oferty['Rodzaj nieruchomosci'].str.contains('Dom ')].shape[0]>0:\n",
+    "    oferty.rename(columns={'Powierzchnia działki': 'Powierzchnia działki (m2)'}, inplace=True)\n",
+    "    oferty['Powierzchnia działki (m2)']=oferty['Powierzchnia działki (m2)'].apply(lambda x: zmiana_na_float(x))\n",
+    "    kolejnosc_kolumn=['Nr oferty', 'Data dodania','Data pobrania oferty',\n",
+    "                      'Rodzaj nieruchomosci','Adres','Rynek','Powierzchnia (m2)','Powierzchnia działki (m2)',\n",
+    "                    'Cena (zł)','Cena (zł/m2)', 'Rodzaj zabudowy','Stan wykończenia', 'Opis' ]\n",
+    "    oferty=oferty.reindex(columns=kolejnosc_kolumn)\n",
+    "elif oferty[oferty['Rodzaj nieruchomosci'].str.contains('Działka')].shape[0]>0:\n",
+    "    kolejnosc_kolumn=['Nr oferty', 'Data dodania','Data pobrania oferty',\n",
+    "                      'Rodzaj nieruchomosci','Adres', 'Powierzchnia (m2)', 'Cena (zł)', 'Cena (zł/m2)', \n",
+    "                          'Typ działki', 'Opis']\n",
+    "    oferty=oferty.reindex(columns=kolejnosc_kolumn)\n",
+    "elif oferty[oferty['Rodzaj nieruchomosci'].str.contains('użytkowy')].shape[0]>0:\n",
+    "    kolejnosc_kolumn=['Nr oferty', 'Data dodania','Data pobrania oferty',\n",
+    "                      'Rodzaj nieruchomosci','Adres','Rynek','Powierzchnia (m2)','Cena (zł)','Cena (zł/m2)',\n",
+    "                          'Piętro','Stan wykończenia', 'Przeznaczenie lokalu', 'Rok budowy', 'Opis']\n",
+    "    oferty=oferty.reindex(columns=kolejnosc_kolumn)\n",
+    "\n",
+    "sciezka='/home/kinga/python/Web_scrapping/'+plik_wynikowy+'.xlsx'\n",
+    "# zapisanie do pliku Excel \n",
+    "oferty.to_excel(sciezka, index=False)\n",
+    "print ('GOTOWE :) Plik został zapisany w lokalizacji: ', sciezka)\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
@@ -1208,7 +1400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
